Fix bug where premove circle does not fit tiles
Add start game modal to code base

Add reset game function to code base

--- a/src/components/Tile/Tile.css
+++ b/src/components/Tile/Tile.css
@@ -37,8 +37,8 @@
 .tile-highlight.piece-circle::before {
     position: absolute;
     content: " ";
-    width: 124px;
-    height: 124px;
+    width: 134px;
+    height: 134px;
     border: 5px solid rgba(0, 0, 0, 0.5);
     border-radius: 50%;
 }
